--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -8,6 +8,19 @@
         <item name="android:lineHeight">@dimen/title_1_height</item>
     </style>
 
+    <style name="title_2">
+        <item name="android:textSize">@dimen/title_2</item>
+        <item name="fontFamily">@font/sf_pro_display_medium</item>
+        <item name="android:lineHeight">@dimen/title_2_height</item>
+    </style>
+
+    <style name="title_4">
+        <item name="android:textSize">@dimen/title_4</item>
+        <item name="fontFamily">@font/sf_pro_display_regular</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:lineHeight">@dimen/title_4_height</item>
+    </style>
+
     <style name="caption_1">
         <item name="android:textSize">@dimen/caption_1</item>
         <item name="fontFamily">@font/sf_pro_display_medium</item>
@@ -23,6 +36,12 @@
         <item name="android:textSize">@dimen/button_text_2</item>
         <item name="fontFamily">@font/sf_pro_display_medium</item>
         <item name="android:lineHeight">@dimen/button_text_2_height</item>
+    </style>
+
+    <style name="element_text">
+        <item name="android:textSize">@dimen/element_text</item>
+        <item name="fontFamily">@font/sf_pro_display_regular</item>
+        <item name="android:lineHeight">@dimen/element_text_height</item>
     </style>
 
     <style name="AuthInputLayout" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
@@ -49,6 +68,35 @@
         <item name="android:textSize">@dimen/button_text_2</item>
         <item name="fontFamily">@font/sf_pro_display_medium</item>
         <item name="android:lineHeight">@dimen/button_text_2_height</item>
+    </style>
+
+    <style name="DiscountNotActiveButton" parent="ShapeAppearanceOverlay.Material3.Button">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:backgroundTint">@color/light_pink</item>
+        <item name="cornerRadius">8dp</item>
+        <item name="android:textSize">@dimen/button_text_2</item>
+        <item name="fontFamily">@font/sf_pro_display_medium</item>
+        <item name="android:lineHeight">@dimen/button_text_2_height</item>
+    </style>
+
+    <style name="FilterButton" parent="ShapeAppearanceOverlay.Material3.Button">
+        <item name="android:layout_width">65dp</item>
+        <item name="android:layout_height">24dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:textSize">@dimen/button_text_2</item>
+        <item name="fontFamily">@font/sf_pro_display_medium</item>
+        <item name="android:lineHeight">@dimen/button_text_2_height</item>
+        <item name="android:elevation">0dp</item>
+    </style>
+
+    <style name="DiscountBlock" parent="CardView">
+        <item name="android:backgroundTint">@color/pink</item>
+        <item name="android:elevation">0dp</item>
+        <item name="cornerRadius">4dp</item>
+        <item name="android:height">16dp</item>
     </style>
 
 
