--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="pink">#D62F89</color>
     <color name="light_pink">#FF8AC9</color>
     <color name="dark_blue">#52606D</color>
+    <color name="orange">#F9A249</color>
 
     <color name="override_transparent_color" tools:override="true">@android:color/transparent</color>
 
