--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -4,12 +4,25 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="grey">#A0A1A3</color>
-    <color name="light_grey">#F8F8F8</color>
-    <color name="pink">#D62F89</color>
-    <color name="light_pink">#FF8AC9</color>
-    <color name="dark_blue">#52606D</color>
-    <color name="orange">#F9A249</color>
+    //background
+    <color name="background_light_grey">#F8F8F8</color>
+    <color name="background_pink">#D62F89</color>
+    <color name="background_light_pink">#FF8AC9</color>
+
+
+    //text
+    <color name="text_pink">#D62F89</color>
+    <color name="text_light_pink">#FF8AC9</color>
+    <color name="text_orange">#F9A249</color>
+    <color name="text_grey">#A0A1A3</color>
+    <color name="text_dark_grey">#3E3E3E</color>
+
+    //element
+    <color name="element_pink">#D62F89</color>
+    <color name="element_orange">#F9A249</color>
+    <color name="element_light_grey">#DEDEDE</color>
+    <color name="element_dark_grey">#3E3E3E</color>
+    <color name="element_dark_blue">#52606D</color>
 
     <color name="override_transparent_color" tools:override="true">@android:color/transparent</color>
 
