--- a/core/src/main/res/values/dimens.xml
+++ b/core/src/main/res/values/dimens.xml
@@ -2,7 +2,8 @@
 <resources>
 
     //text_size
-    <dimen name="large_title_1">16sp</dimen>
+    <dimen name="large_title">20sp</dimen>
+    <dimen name="large_title_height">26dp</dimen>
     <dimen name="title_1">16sp</dimen>
     <dimen name="title_1_height">20.8dp</dimen>
     <dimen name="title_2">14sp</dimen>
@@ -12,14 +13,17 @@
     <dimen name="title_4">14sp</dimen>
     <dimen name="title_4_height">18.2dp</dimen>
     <dimen name="text_1">12sp</dimen>
+    <dimen name="text_1_height">15.6dp</dimen>
     <dimen name="caption_1">10sp</dimen>
     <dimen name="caption_1_height">11dp</dimen>
     <dimen name="button_text_1">12sp</dimen>
+    <dimen name="button_text_1_height">15.6dp</dimen>
     <dimen name="button_text_2">14sp</dimen>
     <dimen name="button_text_2_height">18.2dp</dimen>
     <dimen name="element_text">9sp</dimen>
     <dimen name="element_text_height">9.9dp</dimen>
     <dimen name="price_text">24sp</dimen>
+    <dimen name="price_text_height">31.2dp</dimen>
     <dimen name="placeholder_text">16sp</dimen>
     <dimen name="link_text">10sp</dimen>
 
@@ -28,8 +32,16 @@
     <dimen name="margin_3dp_small">3dp</dimen>
     <dimen name="margin_4dp_small">4dp</dimen>
     <dimen name="margin_6dp_small">6dp</dimen>
+    <dimen name="margin_8dp_small">8dp</dimen>
     <dimen name="margin_10dp_small">10dp</dimen>
+    <dimen name="margin_12dp_medium">12dp</dimen>
     <dimen name="margin_16dp_medium">16dp</dimen>
+    <dimen name="margin_20dp_medium">20dp</dimen>
+    <dimen name="margin_24dp_large">24dp</dimen>
     <dimen name="margin_32dp_large">32dp</dimen>
+    <dimen name="margin_34dp_large">34dp</dimen>
+
+    //element size
+    <dimen name="toolbar_height">46dp</dimen>
 
 </resources>
