--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="Large_title">
+        <item name="android:textSize">@dimen/large_title</item>
+        <item name="fontFamily">@font/sf_pro_display_medium</item>
+        <item name="android:lineHeight">@dimen/large_title_height</item>
+    </style>
+
     <style name="title_1">
         <item name="android:textSize">@dimen/title_1</item>
         <item name="fontFamily">@font/sf_pro_display_medium</item>
@@ -38,6 +44,12 @@
         <item name="fontFamily">@font/sf_pro_display_regular</item>
     </style>
 
+    <style name="button_text_1">
+        <item name="android:textSize">@dimen/button_text_1</item>
+        <item name="fontFamily">@font/sf_pro_display_medium</item>
+        <item name="android:lineHeight">@dimen/button_text_1_height</item>
+    </style>
+
     <style name="button_text_2">
         <item name="android:textSize">@dimen/button_text_2</item>
         <item name="fontFamily">@font/sf_pro_display_medium</item>
@@ -50,6 +62,18 @@
         <item name="android:lineHeight">@dimen/element_text_height</item>
     </style>
 
+    <style name="text_1">
+        <item name="android:textSize">@dimen/text_1</item>
+        <item name="fontFamily">@font/sf_pro_display_regular</item>
+        <item name="android:lineHeight">@dimen/text_1_height</item>
+    </style>
+
+    <style name="price_text">
+        <item name="android:textSize">@dimen/price_text</item>
+        <item name="fontFamily">@font/sf_pro_display_medium</item>
+        <item name="android:lineHeight">@dimen/price_text_height</item>
+    </style>
+
     <style name="AuthInputLayout" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">50dp</item>
@@ -60,8 +84,8 @@
         <item name="boxStrokeWidthFocused">0dp</item>
         <item name="boxStrokeWidth">0dp</item>
         <item name="boxStrokeColor">@color/override_transparent_color</item>
-        <item name="boxBackgroundColor">@color/light_grey</item>
-        <item name="hintTextColor">@color/grey</item>
+        <item name="boxBackgroundColor">@color/background_light_grey</item>
+        <item name="hintTextColor">@color/text_grey</item>
         <item name="backgroundTint">@android:color/transparent</item>
     </style>
 
@@ -69,7 +93,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">50dp</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:backgroundTint">@color/light_pink</item>
+        <item name="android:backgroundTint">@color/text_light_pink</item>
         <item name="cornerRadius">8dp</item>
         <item name="android:textSize">@dimen/button_text_2</item>
         <item name="fontFamily">@font/sf_pro_display_medium</item>
@@ -78,7 +102,7 @@
 
     <style name="MyButton" parent="ShapeAppearanceOverlay.Material3.Button">
         <item name="shapeAppearance">@style/AddButtonShape</item>
-        <item name="android:backgroundTint">@color/pink</item>
+        <item name="android:backgroundTint">@color/element_pink</item>
     </style>
 
     <style name="AddButtonShape">
@@ -87,17 +111,6 @@
         <item name="cornerFamilyBottomRight">cut</item>
         <item name="cornerFamilyBottomLeft">cut</item>
         <item name="cornerSizeTopLeft">8dp</item>
-    </style>
-
-    <style name="DiscountNotActiveButton" parent="ShapeAppearanceOverlay.Material3.Button">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">50dp</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:backgroundTint">@color/light_pink</item>
-        <item name="cornerRadius">8dp</item>
-        <item name="android:textSize">@dimen/button_text_2</item>
-        <item name="fontFamily">@font/sf_pro_display_medium</item>
-        <item name="android:lineHeight">@dimen/button_text_2_height</item>
     </style>
 
     <style name="FilterButton" parent="ShapeAppearanceOverlay.Material3.Button">
@@ -112,7 +125,7 @@
     </style>
 
     <style name="DiscountBlock" parent="CardView">
-        <item name="android:backgroundTint">@color/pink</item>
+        <item name="android:backgroundTint">@color/element_pink</item>
         <item name="android:elevation">0dp</item>
         <item name="cornerRadius">4dp</item>
         <item name="android:height">16dp</item>
