--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,5 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/nav_graph">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/nav_home">
+
+    <fragment
+        android:id="@+id/nav_home"
+        android:label="@string/menu_home" />
+
+    <fragment
+        android:id="@+id/nav_catalogue"
+        android:label="@string/menu_catalogue" />
+
+    <fragment
+        android:id="@+id/nav_cart"
+        android:label="@string/menu_cart" />
+
+    <fragment
+        android:id="@+id/nav_action"
+        android:label="@string/menu_action" />
+
+    <fragment
+        android:id="@+id/nav_profile"
+        android:label="@string/menu_profile" />
 
 </navigation>
