- добавлен модуль получения данных из сети - начата реализация логии фрагмента каталога

--- a/catalogue_screen/src/main/res/drawable/chip_text_color_selector.xml
+++ b/catalogue_screen/src/main/res/drawable/chip_text_color_selector.xml
@@ -3,5 +3,5 @@
 
     <item android:state_checked="true" android:color="@color/white" />
 
-    <item android:color="@color/grey" />
+    <item android:color="@color/text_grey" />
 </selector>
