--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,10 +2,12 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/nav_home">
+    app:startDestination="@id/nav_catalogue">
 
     <fragment
         android:id="@+id/nav_home"
+        android:name="com.test.application.onlinestore.view.HomeFragment"
+        app:layout="@layout/fragment_home"
         android:label="@string/menu_home" />
 
     <fragment
