--- a/catalogue_screen/src/main/res/layout/fragment_catalogue.xml
+++ b/catalogue_screen/src/main/res/layout/fragment_catalogue.xml
@@ -51,10 +51,10 @@
         android:id="@+id/chip_tag_filters"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_16dp_medium"
         android:layout_marginStart="@dimen/margin_16dp_medium"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="@dimen/margin_16dp_medium"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sort_spinner"
         app:singleSelection="true">
 
@@ -63,9 +63,9 @@
             style="@style/CustomChipFilterStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tag_all"
             android:checked="true"
-            app:closeIconEnabled="true"/>
+            android:text="@string/tag_all"
+            app:closeIconEnabled="true" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip_face"
@@ -77,15 +77,16 @@
     </com.google.android.material.chip.ChipGroup>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_products_catalogue"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/margin_10dp_small"
         android:layout_marginTop="@dimen/margin_32dp_large"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        tools:listitem="@layout/item_product"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/chip_tag_filters"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/chip_tag_filters"
+        tools:listitem="@layout/item_product" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
