--- a/product_card_screen/src/main/res/layout/fragment_product_detail.xml
+++ b/product_card_screen/src/main/res/layout/fragment_product_detail.xml
@@ -50,6 +50,7 @@
             app:layout_constraintTop_toBottomOf="@id/app_bar_layout" />
 
         <CheckBox
+            android:id="@+id/cb_favourite"
             android:layout_width="@dimen/favorite_icon_size"
             android:layout_height="@dimen/favorite_icon_size"
             android:button="@drawable/selector_favorite"
@@ -113,7 +114,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tv_product_name"
+            android:id="@+id/tv_title"
             style="@style/title_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -124,7 +125,7 @@
             app:layout_constraintTop_toBottomOf="@id/pagination" />
 
         <TextView
-            android:id="@+id/tv_long_product_name"
+            android:id="@+id/tv_subtitle"
             style="@style/Large_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -134,10 +135,10 @@
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_product_name" />
+            app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
         <TextView
-            android:id="@+id/tv_stock_count"
+            android:id="@+id/tv_available_stock"
             style="@style/text_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -146,7 +147,7 @@
             android:text="@string/reamining_stock_mock"
             android:textColor="@color/text_grey"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_long_product_name" />
+            app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />
 
         <View
             android:id="@+id/bound_view"
@@ -156,7 +157,7 @@
             android:background="@color/background_light_grey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_stock_count" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_available_stock" />
 
 
         <include
@@ -219,13 +220,14 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_16dp_medium"
             android:layout_marginTop="@dimen/margin_8dp_small"
+            android:breakStrategy="simple"
             android:text="@string/product_description_mock"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_brand" />
 
         <TextView
-            android:id="@+id/hide_text"
+            android:id="@+id/btn_show_hide_description"
             style="@style/button_text_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -246,7 +248,7 @@
             android:text="@string/features_label"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/hide_text" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_show_hide_description" />
 
         <include
             android:id="@+id/features_block"
@@ -287,20 +289,19 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_16dp_medium"
             android:ellipsize="end"
-            android:lines="2"
             android:text="@string/product_composition_mock"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/composition_label" />
 
         <TextView
-            android:id="@+id/btn_dropdown"
+            android:id="@+id/btn_show_hide_composition"
             style="@style/button_text_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_16dp_medium"
             android:layout_marginTop="@dimen/margin_10dp_small"
-            android:text="@string/dropdown_text"
+            android:text="@string/hide_text"
             android:textColor="@color/text_grey"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_product_composition" />
@@ -308,17 +309,17 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/btn_add_to_cart"
             android:layout_width="0dp"
-            android:elevation="0dp"
             android:layout_height="@dimen/add_to_cart_btn_height"
             android:layout_marginHorizontal="@dimen/margin_16dp_medium"
             android:layout_marginTop="@dimen/margin_32dp_large"
             android:layout_marginBottom="@dimen/margin_8dp_small"
             android:backgroundTint="@color/background_pink"
+            android:elevation="0dp"
             app:cardCornerRadius="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_dropdown"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/btn_show_hide_composition">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -341,8 +342,8 @@
                     style="@style/caption_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_8dp_small"
                     android:layout_margin="@dimen/margin_16dp_medium"
+                    android:layout_marginStart="@dimen/margin_8dp_small"
                     android:text="@string/add_to_cart_old_price"
                     android:textColor="@color/text_light_pink"
                     app:layout_constraintBottom_toBottomOf="parent"
