--- a/account_profile_screen/src/main/res/layout/fragment_account_profile.xml
+++ b/account_profile_screen/src/main/res/layout/fragment_account_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context="view.AccountProfileFragment"
     tools:ignore="contentDescription">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -56,6 +57,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/tv_user_name"
                 style="@style/title_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -67,6 +69,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/tv_user_phone"
                 style="@style/caption_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -87,12 +90,12 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
     <include
+        android:id="@+id/menu_layout"
         layout="@layout/layout_menu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -103,6 +106,7 @@
         app:layout_constraintTop_toBottomOf="@id/avatar_info_block" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_logout"
         style="@style/button_text_2"
         android:layout_width="0dp"
         android:layout_height="@dimen/logout_btn_height"
@@ -115,6 +119,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
