--- a/account_profile_screen/src/main/res/values/string.xml
+++ b/account_profile_screen/src/main/res/values/string.xml
@@ -5,4 +5,11 @@
     <string name="user_phone_mock">+7 993 877 44 02</string>
     <string name="favorites_count_mock">1 товар</string>
 
+    //formating
+    <string name="user_name">%1$s %2$s</string>
+    <string name="formated_favourite_item">%d %s</string>
+    <string name="favourites_one_item">товар</string>
+    <string name="favourites_few_items">товара</string>
+    <string name="favourites_many_items">товаров</string>
+
 </resources>
