--- a/favourite_screen/src/main/res/layout/fragment_favourites.xml
+++ b/favourite_screen/src/main/res/layout/fragment_favourites.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:ignore="contentDescription">
+    tools:ignore="contentDescription"
+    tools:context="view.FavouritesFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
