--- a/favourite_screen/src/main/res/layout/fragment_favourites.xml
+++ b/favourite_screen/src/main/res/layout/fragment_favourites.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:ignore="contentDescription"
-    tools:context="view.FavouritesFragment">
+    tools:context="view.FavouritesFragment"
+    tools:ignore="contentDescription">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
@@ -20,6 +20,7 @@
             android:layout_height="@dimen/toolbar_height">
 
             <ImageView
+                android:id="@+id/btn_back"
                 android:layout_width="@dimen/toolbar_icon_size"
                 android:layout_height="@dimen/toolbar_icon_size"
                 android:layout_gravity="start"
@@ -38,17 +39,30 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_favourites"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/tab_layout_height"
         android:layout_marginHorizontal="@dimen/margin_16dp_medium"
-        android:layout_marginTop="60dp"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="@dimen/margin_8dp_small"
+        android:background="@drawable/background_tab_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
-        tools:listitem="@layout/item_product" />
+        app:tabBackground="@drawable/background_tab"
+        app:tabPadding="@dimen/margin_3dp_small"
+        app:tabSelectedTextAppearance="@style/TabLayoutSelectedTextAppearance"
+        app:tabTextAppearance="@style/TabLayoutTextAppearance" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/fragment_view_pager"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/margin_16dp_medium"
+        android:layout_marginTop="@dimen/margin_8dp_small"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tabs" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
